Fixed mobile view (although z-index changes might be breaking) Re-aligned zone menu toggle button

--- a/src/app/themes/volumio/components/side-menu/volumio-side-menu.scss
+++ b/src/app/themes/volumio/components/side-menu/volumio-side-menu.scss
@@ -66,5 +66,13 @@ $sideMenuWidth: 230px;
         right: 16px;
       };
     }
+    #closeMenuBtnZone {
+      position: fixed;
+      width: auto;
+      border-bottom: none;
+      background-color: none;
+      top: 10px;
+      right: 20px;
+    }
   }
 }
