--- a/src/app/themes/volumio/footer/volumio-footer.scss
+++ b/src/app/themes/volumio/footer/volumio-footer.scss
@@ -1,7 +1,7 @@
 footer {
   @include make-row();
   position: fixed;
-  z-index: 2;
+  z-index: 1;
   bottom: 0;
   width: 100%;
   height: $footerHeight;
