--- a/src/app/themes/volumio/partials/volumio-tab-bar.scss
+++ b/src/app/themes/volumio/partials/volumio-tab-bar.scss
@@ -42,7 +42,7 @@
 
   .zoneBtn {
     position: absolute;
-    top: 3px;
-    right: 13px;
+    top: 5px;
+    right: 2px;
   }
 }
